--- a/src/Navbar/Navbar.module.css
+++ b/src/Navbar/Navbar.module.css
@@ -18,6 +18,7 @@
 }
 
 .overlayContainer {
+  position: sticky;
   width: 100%;
   height: 100%;
   display: flex;
